@@ -25,7 +25,6 @@ import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.simsharing.Parameter;
 import edu.colorado.phet.common.phetcommon.simsharing.SimSharingManager;
 import edu.colorado.phet.common.phetcommon.simsharing.components.SimSharingDragListener;
-import edu.colorado.phet.common.phetcommon.simsharing.components.SimSharingDragListener.DragFunction;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.util.logging.LoggingUtils;
@@ -102,12 +101,14 @@ public class JmolViewerNode extends PhetPNode {
 
         viewerPanel = new ViewerPanel( currentMolecule.get(), background, size );
         //Record drag events for sim-sharing. Note that we cannot guarantee that these events are sent before the viewer display changes.
-        viewerPanel.addMouseListener( new SimSharingDragListener( new DragFunction() {
-            public void apply( String action, Parameter xParam, Parameter yParam, MouseEvent event ) {
-                SimSharingManager.sendEvent( Objects.OBJECT_JMOL_VIEWER_NODE, action, xParam, yParam,
-                                             param( Parameters.PARAM_CURRENT_MOLECULE, currentMolecule.get().getName() ) );
-            }
-        } ) );
+        viewerPanel.addMouseListener( new SimSharingDragListener() {{
+            setStartEndFunction( new DragFunction() {
+                public void apply( String action, Parameter xParam, Parameter yParam, MouseEvent event ) {
+                    SimSharingManager.sendEvent( Objects.OBJECT_JMOL_VIEWER_NODE, action, xParam, yParam,
+                                                 param( Parameters.PARAM_CURRENT_MOLECULE, currentMolecule.get().getName() ) );
+                }
+            } );
+        }} );
         addChild( new PSwing( viewerPanel ) );
 
         this.molecule = new Property<Molecule3D>( currentMolecule.get() );
